2011-07-01  Daiki Ueno  <ueno@unixuser.org>

	* auth-source.el (auth-source-backend): Fix :initarg for data slot.

2011-06-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml2015.el (mml2015-use): Replace string-match-p with string-match
	for old Emacsen.

2011-06-30  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-use): Don't try to load PGG on Emacs 24, when EPG
	is not fully working.

2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el: Autoload sha1 on XEmacs.

	* gnus-group.el (gnus-read-ephemeral-emacs-bug-group): Take an optional
	quit window configuration.

	* auth-source.el (epg-context-set-passphrase-callback): Remove
	duplicate autoload.

2011-06-30  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-request-article): Allow requesting articles by
	Message-ID with nnimap.

	* gnus-sum.el (gnus-refer-article-methods): Allow (nnir) entry to use
	current server.

2011-06-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Autoload EPA/EPG functions.
	(auth-source-netrc-use-gpg-tokens): Clarify that it should not be
	changed when EPA/EPG is not available.
	(auth-source-backend): Rename "arg" member to "data".
	(auth-source-backend-parse, auth-source-plstore-search)
	(auth-source-plstore-create): Use it.

2011-06-30  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-art.el (gnus-request-article-this-buffer): Use existing function
	`gnus-refer-article-methods'.

2011-06-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Require EPA and EPG.
	(auth-source-passphrase-alist): New variable.
	(auth-source-passphrase-callback-function)
	(auth-source-token-passphrase-callback-function): Callbacks for the
	netrc field encryption (GPG tokens).
	(auth-source-epa-extract-gpg-token, auth-source-epa-make-gpg-token):
	Symmetric encryption and decryption of the netrc GPG tokens.
	(auth-source-netrc-normalize): Use them, simplifying the closure.

2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>
